--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "overlaymenu",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
   "main": "./lib/index.js",
   "scripts": {
@@ -22,14 +22,16 @@
   },
   "keywords": [
     "react",
-    "react16",
-    "fragment",
-    "array",
+    "popup",
+    "overlay screen",
+    "auto-close menu",
+    "overlay menu",
+    "popup menu",
+    "react menu",
     "components"
   ],
   "peerDependencies": {
-    "react": "^15.0.0 || ^16.0.0",
-    "prop-types": "^15.0.0 || ^16.0.0"
+    "react": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -37,13 +39,11 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "cowsay": "^1.2.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.5.1",
-    "prop-types": "^15.6.0",
     "react": "^16.2.0"
   }
 }
