--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "overlaymenu",
-  "version": "1.1.3",
+  "version": "1.1.8",
   "description": "",
   "main": "./lib/index.js",
+  "typings": "./lib/index.js",
   "scripts": {
     "prepublish": "npm run lint && npm run _build && npm run _test",
     "build": "npm run lint && npm run _build",
@@ -30,6 +31,10 @@
     "react menu",
     "components"
   ],
+  "peerDependencies": {
+    "prop-types": "^15.7.2",
+    "react": "^16.2.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^8.0.2",
@@ -41,6 +46,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.5.1",
+    "prop-types": "^15.7.2",
     "react": "^16.2.0"
   }
 }
