--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "overlaymenu",
-  "version": "1.1.9",
+  "version": "1.2.0",
   "description": "",
   "main": "./lib/index.js",
   "typings": "./lib/index.js",
@@ -31,8 +31,10 @@
     "react menu",
     "components"
   ],
+  "dependencies": {
+    "prop-types": "^15.7.2"
+  },
   "peerDependencies": {
-    "prop-types": "^15.7.2",
     "react": "^16.2.0"
   },
   "devDependencies": {
